--- a/Classes/Common/FanKit.bundle/zh-Hant.lproj/Localizable.strings
+++ b/Classes/Common/FanKit.bundle/zh-Hant.lproj/Localizable.strings
@@ -6,3 +6,10 @@
 "FanKit_secondAgo" = "秒以前";
 
 "FanKit_yesterday" = "昨天";
+
+
+"FanKit_Confirm" = "確定";
+"FanKit_WarmTips" = "溫馨提示";
+"FanKit_ProhibitCameraPermission"  =   "您禁止了該攝像機權限，請在設置界面開啓！";
+"FanKit_OpenFlash"    =   "該設備不能打開閃光燈!";
+"FanKit_ProhibitAlbumPermission" = "您禁止了該相冊權限，請在設置界面開啟！";
